--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular2-indexeddb": "^1.1.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "indexeddbshim": "^3.0.4",
     "intl": "^1.2.5",
     "rxjs": "^5.4.2",
     "ts-md5": "^1.2.2",
